--- a/hi.html
+++ b/hi.html
@@ -1,2 +1,3 @@
 <h1>Well, I have successfully committed one file.</h1>
 <div class="ok">Let's check whether i can commit changes</div>
+<div>Well it did!</div>
