--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <h1>Hello! I'm Rohith Peddi.</h1>
+<b> This is my git-hub account: 
+    <a href = "https://github.com/rohithpeddi7">rohithpeddi7</a></b>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>index.html</title>
+    </head>
+    <body>
+        <h1>Hello! I'm Rohith Peddi.</h1>
+    <h2> This is my git-hub account: 
+        <a href = "https://github.com/rohithpeddi7">rohithpeddi7</a></h2>
+    
+    </body>
+    </html>
