Added git-hub account details
Git-hub username

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<h1>Hello! I'm Rohith Peddi.</h1>
-<b> This is my git-hub account: 
-    <a href = "https://github.com/rohithpeddi7">rohithpeddi7</a></b>
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -12,7 +9,7 @@
     <body>
         <h1>Hello! I'm Rohith Peddi.</h1>
     <h2> This is my git-hub account: 
-        <a href = "https://github.com/rohithpeddi7">rohithpeddi7</a></h2>
+        <a href = "https://github.com/rohithpeddi7"><i>rohithpeddi7</i></a></h2>
     
     </body>
     </html>
